hphp/test/slow/variadic_args/splat_call_multi.php.expectf
Fatal error: Only the last parameter in a function call is allowed to use ... in %s/splat_call_multi.php on line 10
